# tilegame

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh
src/: layerfragment.h  main.cpp  tilelayer.cpp  tilelayer.h  tilemap.cpp  tilemap.h  tileset.cpp  tileset.h
src/tile_manager/: layerfragment.h  tilelayer.cpp  tilemap.h  tileset.cpp
test/: CMakeLists.txt
tile_manager/: CMakeLists.txt
tile_manager/include/tile_manager/: layerfragment.h  tilelayer.h  tilemap.h  tileset.h
tile_manager/src/: tilelayer.cpp  tilemap.cpp  tileset.cpp
tilemanager/: CMakeLists.txt
tilemanager/include/tilemanager/: layerfragment.h  tilelayer.h  tilemap.h
tilemanager/src/: tilelayer.cpp  tilemap.cpp  tileset.cpp
tiletest/: CMakeLists.txt
tiletest/assets/: test.tmx
tiletest/src/: main.cpp
